@@ -1,6 +1,8 @@
 ---
 language: perl
 perl:
+  - 5.27
+  - 5.26
   - 5.24
   - 5.22
   - 5.16
