@@ -1,8 +1,8 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.041.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
 use strict;
 use warnings;
 
-use 5.009005;
+use 5.012;
 
 use ExtUtils::MakeMaker;
 
@@ -14,17 +14,17 @@ my %WriteMakefileArgs = (
   },
   "DISTNAME" => "Bible-OBML",
   "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.009005",
+  "MIN_PERL_VERSION" => "5.012",
   "NAME" => "Bible::OBML",
   "PREREQ_PM" => {
-    "List::MoreUtils" => 0,
+    "Bible::Reference" => "1.02",
     "Moose" => 0,
+    "Moose::Util::TypeConstraints" => 0,
+    "MooseX::Privacy" => 0,
     "Template" => 0,
     "Text::Balanced" => 0,
     "Text::Wrap" => 0,
-    "Throwable" => 0,
-    "strict" => 0,
-    "warnings" => 0
+    "Throwable" => 0
   },
   "TEST_REQUIRES" => {
     "File::Spec" => 0,
@@ -33,10 +33,11 @@ my %WriteMakefileArgs = (
     "Test::Moose" => 0,
     "Test::More" => 0,
     "Test::Most" => 0,
-    "blib" => "1.01",
-    "constant" => 0
+    "constant" => 0,
+    "strict" => 0,
+    "warnings" => 0
   },
-  "VERSION" => "1.07",
+  "VERSION" => "1.08",
   "test" => {
     "TESTS" => "t/*.t t/Bible/*.t t/Bible/OBML/*.t"
   }
@@ -44,11 +45,13 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Bible::Reference" => "1.02",
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
-  "List::MoreUtils" => 0,
   "Moose" => 0,
+  "Moose::Util::TypeConstraints" => 0,
+  "MooseX::Privacy" => 0,
   "Template" => 0,
   "Test::Moose" => 0,
   "Test::More" => 0,
@@ -56,7 +59,6 @@ my %FallbackPrereqs = (
   "Text::Balanced" => 0,
   "Text::Wrap" => 0,
   "Throwable" => 0,
-  "blib" => "1.01",
   "constant" => 0,
   "strict" => 0,
   "warnings" => 0
